Add Gform button

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                     </div>
                     <div class="confirm">
                         <p>Untuk konfirmasi donasi dapat dilakukan melalui:</p>
+                        <a href="#">GForm</a>
                         <a href="#">CP: Ayub</a>
                         <a href="#">CP: Delfita</a>
                     </div>
